@@ -1,0 +1,5 @@
+class ConditionTestCase < Test::Unit::TestCase
+  include CSS::SAC::Conditions
+
+  undef :default_test
+end
