@@ -5,3 +5,5 @@ require "flexmock"
 require "flexmock/test_unit"
 
 require "css/sac"
+require "test/selector_test_case"
+require "test/condition_test_case"
