@@ -1,0 +1,5 @@
+class SelectorTestCase < Test::Unit::TestCase
+  include CSS::SAC::Selectors
+
+  undef :default_test
+end
